--- a/redis-test/pom.xml
+++ b/redis-test/pom.xml
@@ -54,11 +54,11 @@
             <artifactId>gson</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
-            <version>1.2.11</version>
-        </dependency>
+     <dependency>
+           <groupId>com.alibaba</groupId>
+           <artifactId>fastjson</artifactId>
+           <version>[1.2.31,)</version>
+         </dependency>
 
         <dependency>
             <groupId>net.minidev</groupId>
